; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_goaccess.c_setup_thread_signals.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_goaccess.c_setup_thread_signals.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sigaction = type { i64, i32, i32 }

@handle_signal_action = common dso_local global i32 0, align 4
@SIGINT = common dso_local global i32 0, align 4
@SIGPIPE = common dso_local global i32 0, align 4
@SIGTERM = common dso_local global i32 0, align 4
@SIG_SETMASK = common dso_local global i32 0, align 4
@oldset = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @setup_thread_signals to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setup_thread_signals() #0 {
  %1 = alloca %struct.sigaction, align 8
  %2 = load i32, i32* @handle_signal_action, align 4
  %3 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %1, i32 0, i32 2
  store i32 %2, i32* %3, align 4
  %4 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %1, i32 0, i32 1
  %5 = call i32 @sigemptyset(i32* %4)
  %6 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %1, i32 0, i32 0
  store i64 0, i64* %6, align 8
  %7 = load i32, i32* @SIGINT, align 4
  %8 = call i32 @sigaction(i32 %7, %struct.sigaction* %1, i32* null)
  %9 = load i32, i32* @SIGPIPE, align 4
  %10 = call i32 @sigaction(i32 %9, %struct.sigaction* %1, i32* null)
  %11 = load i32, i32* @SIGTERM, align 4
  %12 = call i32 @sigaction(i32 %11, %struct.sigaction* %1, i32* null)
  %13 = load i32, i32* @SIG_SETMASK, align 4
  %14 = call i32 @pthread_sigmask(i32 %13, i32* @oldset, i32* null)
  ret void
}

declare dso_local i32 @sigemptyset(i32*) #1

declare dso_local i32 @sigaction(i32, %struct.sigaction*, i32*) #1

declare dso_local i32 @pthread_sigmask(i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
